--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_empleadoincapacidad.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_empleadoincapacidad.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
 	<property name="ireport.zoom" value="1.6105100000000017"/>
-	<property name="ireport.x" value="64"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="627"/>
+	<property name="ireport.y" value="201"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -52,118 +52,118 @@ and i.fechadesdeincapacidad>=$P{FECHAINICIO}]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="7" splitType="Stretch"/>
+		<band height="20" splitType="Stretch"/>
 	</title>
 	<pageHeader>
 		<band height="89" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90" x="315" y="54" width="163" height="15"/>
+				<reportElement x="315" y="54" width="163" height="15" uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Reporte de Empleados Con incapaciad]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="04e4df16-4b67-4340-8a24-945fe1331771" x="71" y="69" width="100" height="14"/>
+				<reportElement x="76" y="69" width="100" height="14" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c42b5a94-d56f-415b-9967-63beca281b2d" x="643" y="58" width="61" height="15"/>
+				<reportElement x="643" y="58" width="61" height="15" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="0079daa6-1363-4574-a3cf-8cb78dec494e" x="712" y="58" width="35" height="15"/>
+				<reportElement x="712" y="58" width="35" height="15" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93" x="324" y="70" width="30" height="14"/>
+				<reportElement x="324" y="70" width="30" height="14" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f" x="403" y="70" width="30" height="14"/>
+				<reportElement x="403" y="70" width="30" height="14" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e" x="349" y="70" width="53" height="14"/>
+				<reportElement x="349" y="70" width="53" height="14" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c" x="687" y="72" width="81" height="14"/>
+				<reportElement x="687" y="72" width="81" height="14" uuid="c2464fff-bc9f-4c3b-a4aa-56a405eea00c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="56b210b9-a783-49f8-9ce4-5ab259f720b2" x="43" y="69" width="30" height="14"/>
+				<reportElement x="48" y="69" width="30" height="14" uuid="56b210b9-a783-49f8-9ce4-5ab259f720b2"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="d5244a04-208d-4ef9-bc04-8c758f3c1f28" x="47" y="0" width="212" height="48"/>
+				<reportElement x="47" y="0" width="80" height="70" uuid="d5244a04-208d-4ef9-bc04-8c758f3c1f28"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb" x="652" y="5" width="167" height="52"/>
+				<reportElement x="652" y="5" width="70" height="70" uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="7048bb48-5bd3-4523-954e-6d75beaee769" x="377" y="33" width="66" height="15"/>
+				<reportElement x="377" y="33" width="66" height="15" uuid="7048bb48-5bd3-4523-954e-6d75beaee769"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="ff276982-a8e2-4630-862b-199b523e2b30" x="349" y="18" width="135" height="15"/>
+				<reportElement x="349" y="18" width="135" height="15" uuid="ff276982-a8e2-4630-862b-199b523e2b30"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="18a5c2ea-07e8-4059-bb1d-26a112f366be" x="325" y="4" width="172" height="15"/>
+				<reportElement x="325" y="4" width="172" height="15" uuid="18a5c2ea-07e8-4059-bb1d-26a112f366be"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="689ef65a-c28c-4309-a567-86b3627c4c96" x="429" y="70" width="49" height="14"/>
+				<reportElement x="429" y="70" width="49" height="14" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="389c1719-9f3d-441e-9550-b92970e4a3f4" x="50" y="50" width="100" height="20"/>
+				<reportElement x="50" y="50" width="100" height="20" uuid="389c1719-9f3d-441e-9550-b92970e4a3f4"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_eminc]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6" x="655" y="72" width="30" height="14"/>
+				<reportElement x="655" y="72" width="30" height="14" uuid="8f4080e8-dbe2-4b30-9f43-82f8fbabddf6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -174,191 +174,191 @@ and i.fechadesdeincapacidad>=$P{FECHAINICIO}]]>
 	<columnHeader>
 		<band height="16" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62" x="43" y="0" width="758" height="14" backcolor="#FFFFFF"/>
+				<reportElement x="43" y="0" width="758" height="14" backcolor="#FFFFFF" uuid="47f87b1b-4db2-4d10-b77e-5c9c9f4a3b62"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba" x="47" y="0" width="71" height="14"/>
+				<reportElement x="47" y="0" width="71" height="14" uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="2ef89dec-32c8-43ba-bcc8-d530435c6442" x="523" y="0" width="1" height="14"/>
+				<reportElement x="523" y="0" width="1" height="14" uuid="2ef89dec-32c8-43ba-bcc8-d530435c6442"/>
 			</line>
 			<line>
-				<reportElement uuid="b5d44edf-3426-41f0-9b37-45a17f1b4910" x="355" y="0" width="1" height="14"/>
+				<reportElement x="355" y="0" width="1" height="14" uuid="b5d44edf-3426-41f0-9b37-45a17f1b4910"/>
 			</line>
 			<line>
-				<reportElement uuid="cb4a9ca7-80cc-43ff-9384-040b1a0436bc" x="597" y="0" width="1" height="14"/>
+				<reportElement x="597" y="0" width="1" height="14" uuid="cb4a9ca7-80cc-43ff-9384-040b1a0436bc"/>
 			</line>
 			<staticText>
-				<reportElement uuid="82b4c1ff-82b5-41e6-9f4d-416a004632e9" x="126" y="0" width="71" height="14"/>
+				<reportElement x="126" y="0" width="71" height="14" uuid="82b4c1ff-82b5-41e6-9f4d-416a004632e9"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Incapacidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="9d96dc8a-c06d-411c-bb3a-a1e4467caa4c" x="290" y="0" width="35" height="14"/>
+				<reportElement x="290" y="0" width="35" height="14" uuid="9d96dc8a-c06d-411c-bb3a-a1e4467caa4c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Dui]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="42c43dd0-1a54-41f2-975b-7f860b69ce88" x="359" y="0" width="45" height="14"/>
+				<reportElement x="359" y="0" width="45" height="14" uuid="42c43dd0-1a54-41f2-975b-7f860b69ce88"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="71d15c92-ff7a-4324-a543-da4a1c2a0dd6" x="419" y="0" width="34" height="14"/>
+				<reportElement x="419" y="0" width="34" height="14" uuid="71d15c92-ff7a-4324-a543-da4a1c2a0dd6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="694ba7b8-be21-4b77-add5-7ee34c5c34f8" x="527" y="0" width="40" height="14"/>
+				<reportElement x="527" y="0" width="40" height="14" uuid="694ba7b8-be21-4b77-add5-7ee34c5c34f8"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Tipo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a4a06052-7efe-4ad2-8e94-96507826b9aa" x="462" y="0" width="39" height="14"/>
+				<reportElement x="462" y="0" width="39" height="14" uuid="a4a06052-7efe-4ad2-8e94-96507826b9aa"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[ISSS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="be7e5970-6ebd-4786-8308-9a86eeef148c" x="603" y="0" width="73" height="14"/>
+				<reportElement x="603" y="0" width="73" height="14" uuid="be7e5970-6ebd-4786-8308-9a86eeef148c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Forma Incapacidad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="89473ce8-fc51-49d5-8bb8-9e6039c10e4a" x="693" y="0" width="38" height="14"/>
+				<reportElement x="693" y="0" width="38" height="14" uuid="89473ce8-fc51-49d5-8bb8-9e6039c10e4a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[subsidio]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="f85ecaa9-4240-4aa9-b830-6b8a114a9cf0" x="209" y="0" width="54" height="14"/>
+				<reportElement x="209" y="0" width="54" height="14" uuid="f85ecaa9-4240-4aa9-b830-6b8a114a9cf0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="e6d1a9ad-0945-449c-8284-4ab6a43d2af5" x="739" y="0" width="50" height="14"/>
+				<reportElement x="739" y="0" width="62" height="14" uuid="e6d1a9ad-0945-449c-8284-4ab6a43d2af5"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha Emision]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="52f28059-598c-4499-8cfa-fe8382f639a2" x="118" y="0" width="1" height="14"/>
+				<reportElement x="118" y="0" width="1" height="14" uuid="52f28059-598c-4499-8cfa-fe8382f639a2"/>
 			</line>
 			<line>
-				<reportElement uuid="7cbb21d4-48b1-4474-92b3-4e4476bd37da" x="206" y="0" width="1" height="14"/>
+				<reportElement x="206" y="0" width="1" height="14" uuid="7cbb21d4-48b1-4474-92b3-4e4476bd37da"/>
 			</line>
 			<line>
-				<reportElement uuid="72723f8c-4423-4848-be84-9f3779961f07" x="288" y="0" width="1" height="14"/>
+				<reportElement x="288" y="0" width="1" height="14" uuid="72723f8c-4423-4848-be84-9f3779961f07"/>
 			</line>
 			<line>
-				<reportElement uuid="ed8197dc-ddc5-49b2-8ef6-2dd11c882975" x="410" y="0" width="1" height="14"/>
+				<reportElement x="410" y="0" width="1" height="14" uuid="ed8197dc-ddc5-49b2-8ef6-2dd11c882975"/>
 			</line>
 			<line>
-				<reportElement uuid="153ccd9d-3432-4044-af05-7acaf3001689" x="461" y="0" width="1" height="14"/>
+				<reportElement x="461" y="0" width="1" height="14" uuid="153ccd9d-3432-4044-af05-7acaf3001689"/>
 			</line>
 			<line>
-				<reportElement uuid="c4fcf880-abce-49ec-a547-3b2558cd2771" x="684" y="0" width="1" height="14"/>
+				<reportElement x="684" y="0" width="1" height="14" uuid="c4fcf880-abce-49ec-a547-3b2558cd2771"/>
 			</line>
 			<line>
-				<reportElement uuid="ae85246c-fe37-4f4a-94b0-6dbd981df34d" x="732" y="0" width="1" height="14"/>
+				<reportElement x="732" y="0" width="1" height="14" uuid="ae85246c-fe37-4f4a-94b0-6dbd981df34d"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="29" splitType="Stretch">
 			<textField>
-				<reportElement uuid="86a0fde7-8042-497b-84c3-dbbb4781f28d" x="47" y="0" width="71" height="28"/>
+				<reportElement x="47" y="0" width="71" height="28" uuid="86a0fde7-8042-497b-84c3-dbbb4781f28d"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b5d283ea-4282-438d-92b9-2337220a13ed" x="125" y="0" width="82" height="28"/>
+				<reportElement x="125" y="0" width="82" height="28" uuid="b5d283ea-4282-438d-92b9-2337220a13ed"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreincapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="27473eb0-f9a7-408d-bba4-15b7952f70dc" x="209" y="0" width="80" height="28"/>
+				<reportElement x="209" y="0" width="80" height="28" uuid="27473eb0-f9a7-408d-bba4-15b7952f70dc"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="995bdc6f-35c7-4a01-9102-d2fcdb51686f" x="419" y="0" width="42" height="28"/>
+				<reportElement x="419" y="0" width="42" height="28" uuid="995bdc6f-35c7-4a01-9102-d2fcdb51686f"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Hasta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="70cbff8e-5b9f-4571-985c-211a23025c4e" x="462" y="0" width="61" height="28"/>
+				<reportElement x="462" y="0" width="61" height="28" uuid="70cbff8e-5b9f-4571-985c-211a23025c4e"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numerofichaisss}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="409aa449-8af1-4215-8d73-6bbcd949245e" x="527" y="0" width="66" height="28"/>
+				<reportElement x="527" y="0" width="66" height="28" uuid="409aa449-8af1-4215-8d73-6bbcd949245e"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{tipoincapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="a02c40a3-1695-44ce-857c-8f1f0b67008b" x="606" y="0" width="84" height="28"/>
+				<reportElement x="606" y="0" width="84" height="28" uuid="a02c40a3-1695-44ce-857c-8f1f0b67008b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{formaincapacidad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="01dc6839-7fcf-479c-9957-77dab68b8ab5" x="694" y="0" width="38" height="28"/>
+				<reportElement x="694" y="0" width="38" height="28" uuid="01dc6839-7fcf-479c-9957-77dab68b8ab5"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{subsidio}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="a390e6c2-f3b6-461b-bdd8-9eb4f8a4be91" x="362" y="0" width="48" height="28"/>
+				<reportElement x="362" y="0" width="48" height="28" uuid="a390e6c2-f3b6-461b-bdd8-9eb4f8a4be91"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="a690e69e-916a-4efb-ba48-dd383c89425c" x="739" y="0" width="50" height="28"/>
+				<reportElement x="739" y="0" width="50" height="28" uuid="a690e69e-916a-4efb-ba48-dd383c89425c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Fecha Emision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="cd4afe84-7cf5-492d-9e71-5987946288c0" x="290" y="0" width="64" height="28"/>
+				<reportElement x="290" y="0" width="64" height="28" uuid="cd4afe84-7cf5-492d-9e71-5987946288c0"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -375,10 +375,10 @@ and i.fechadesdeincapacidad>=$P{FECHAINICIO}]]>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<line>
-				<reportElement uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95" x="667" y="5" width="100" height="1"/>
+				<reportElement x="667" y="5" width="100" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
 			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc" mode="Opaque" x="670" y="6" width="98" height="13" backcolor="#FFFFFF"/>
+				<reportElement mode="Opaque" x="670" y="6" width="98" height="13" backcolor="#FFFFFF" uuid="d6e8039f-e0be-4d17-98f6-ed8f444238dc"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
