--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9e2a8e50-efd2-42d9-ab62-dda75ce1c952">
 	<property name="ireport.zoom" value="1.3310000000000006"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="157"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -38,89 +38,89 @@ where m.fechasalidamision >= $P{FECHAINICIO} and m.fecharegresomision <= $P{FECH
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="19" splitType="Stretch"/>
+		<band height="20" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="103" splitType="Stretch">
+		<band height="94" splitType="Stretch">
 			<staticText>
-				<reportElement x="334" y="59" width="82" height="17" uuid="d7053db9-171b-457a-a4e9-0f8ae937173a"/>
+				<reportElement x="311" y="51" width="127" height="17" uuid="d7053db9-171b-457a-a4e9-0f8ae937173a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[Misiones Internas]]></text>
+				<text><![CDATA[Reporte de Misiones Internas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="250" y="79" width="31" height="17" uuid="fba48178-f73d-4d13-81b1-90bc0e80d668"/>
+				<reportElement x="289" y="71" width="31" height="17" uuid="fba48178-f73d-4d13-81b1-90bc0e80d668"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="413" y="79" width="30" height="17" uuid="99f1e0a5-532a-4117-9a08-9aa582116b6b"/>
+				<reportElement x="375" y="71" width="30" height="17" uuid="99f1e0a5-532a-4117-9a08-9aa582116b6b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="58" y="83" width="31" height="20" uuid="26170632-5ffd-4de4-9345-a1135898aeae"/>
+				<reportElement x="58" y="75" width="31" height="17" uuid="26170632-5ffd-4de4-9345-a1135898aeae"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="90" y="83" width="100" height="20" uuid="9868b668-743d-4c56-b332-6b8010010281"/>
+				<reportElement x="90" y="75" width="100" height="17" uuid="9868b668-743d-4c56-b332-6b8010010281"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="641" y="71" width="54" height="17" uuid="9298a98d-7fbf-4ceb-9de8-3536aee1c13b"/>
+				<reportElement x="641" y="63" width="54" height="17" uuid="9298a98d-7fbf-4ceb-9de8-3536aee1c13b"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="702" y="71" width="30" height="17" uuid="19e65be8-4c9b-4417-8c85-f6561c3763e9"/>
+				<reportElement x="702" y="63" width="30" height="17" uuid="19e65be8-4c9b-4417-8c85-f6561c3763e9"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="281" y="79" width="88" height="17" uuid="9c862b30-3b82-4997-86fd-9fb9f2258c14"/>
+				<reportElement x="316" y="71" width="58" height="17" uuid="9c862b30-3b82-4997-86fd-9fb9f2258c14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="446" y="80" width="100" height="17" uuid="8980f0e0-9de2-4aa1-a56f-f0c3caafdb16"/>
+				<reportElement x="403" y="71" width="50" height="17" uuid="8980f0e0-9de2-4aa1-a56f-f0c3caafdb16"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="685" y="85" width="85" height="17" uuid="54bc34a6-0d34-4f2f-9811-58a01e3bc8f8"/>
+				<reportElement x="685" y="77" width="85" height="17" uuid="54bc34a6-0d34-4f2f-9811-58a01e3bc8f8"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="648" y="85" width="32" height="17" uuid="251071ba-a5dc-4e37-afc7-16ccfef379ce"/>
+				<reportElement x="648" y="77" width="32" height="17" uuid="251071ba-a5dc-4e37-afc7-16ccfef379ce"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="54" y="66" width="100" height="17" uuid="b80afd25-babd-4fe2-8316-34ce2e5d865c"/>
+				<reportElement x="58" y="58" width="100" height="17" uuid="b80afd25-babd-4fe2-8316-34ce2e5d865c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -148,11 +148,11 @@ where m.fechasalidamision >= $P{FECHAINICIO} and m.fecharegresomision <= $P{FECH
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<image>
-				<reportElement x="54" y="0" width="175" height="65" uuid="3f000636-25b3-4ab1-a605-f3aabc530c47"/>
+				<reportElement x="54" y="0" width="80" height="70" uuid="3f000636-25b3-4ab1-a605-f3aabc530c47"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="644" y="5" width="170" height="65" uuid="38e8ef67-aff0-4fb6-8785-1877e476876d"/>
+				<reportElement x="644" y="5" width="70" height="70" uuid="38e8ef67-aff0-4fb6-8785-1877e476876d"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 		</band>
