--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_abogados.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_abogados.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="5"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
@@ -48,10 +48,10 @@ inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="34" splitType="Stretch"/>
+		<band height="20" splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="119" splitType="Stretch">
+		<band height="110" splitType="Stretch">
 			<staticText>
 				<reportElement x="346" y="64" width="96" height="20" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
 				<textElement>
@@ -81,7 +81,7 @@ inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="102" y="99" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
+				<reportElement x="102" y="90" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -95,49 +95,49 @@ inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="602" y="99" width="46" height="20" uuid="cfa11c60-df1d-4f70-a18b-5a89a6d10e65"/>
+				<reportElement x="614" y="90" width="46" height="20" uuid="cfa11c60-df1d-4f70-a18b-5a89a6d10e65"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="638" y="99" width="85" height="20" uuid="81c75aa1-751f-418e-897e-742d2070f7fb"/>
+				<reportElement x="650" y="90" width="85" height="20" uuid="81c75aa1-751f-418e-897e-742d2070f7fb"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="64" y="99" width="38" height="20" uuid="cc46fa3d-3d6b-4bce-b25d-a3ac1342c32d"/>
+				<reportElement x="64" y="90" width="38" height="20" uuid="cc46fa3d-3d6b-4bce-b25d-a3ac1342c32d"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="571" y="80" width="80" height="20" uuid="2099dcef-101c-4717-8dcb-a1dcbe68ae1d"/>
+				<reportElement x="583" y="71" width="80" height="20" uuid="2099dcef-101c-4717-8dcb-a1dcbe68ae1d"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="651" y="80" width="40" height="20" uuid="d7264e51-4b27-48c4-bd95-96c59ff36691"/>
+				<reportElement x="663" y="71" width="40" height="20" uuid="d7264e51-4b27-48c4-bd95-96c59ff36691"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="65" y="80" width="100" height="20" uuid="61bc1e1e-76fa-4520-bca3-0ae6256b37fe"/>
+				<reportElement x="65" y="71" width="100" height="20" uuid="61bc1e1e-76fa-4520-bca3-0ae6256b37fe"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_abog]]></text>
 			</staticText>
 			<image>
-				<reportElement x="48" y="4" width="90" height="80" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
+				<reportElement x="48" y="4" width="80" height="70" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
@@ -193,7 +193,7 @@ inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '
 				<reportElement x="306" y="0" width="1" height="14" uuid="6073b3c8-5743-4b15-9374-4ba38044537b"/>
 			</line>
 			<staticText>
-				<reportElement x="138" y="0" width="99" height="14" uuid="8a01ccdf-3e10-45d7-9ecd-5076a09bf507"/>
+				<reportElement x="138" y="0" width="150" height="14" uuid="8a01ccdf-3e10-45d7-9ecd-5076a09bf507"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
@@ -204,7 +204,7 @@ inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '
 				<reportElement x="608" y="0" width="1" height="14" uuid="bbd70896-f704-4df2-9c0b-362d7162dd92"/>
 			</line>
 			<staticText>
-				<reportElement x="320" y="0" width="100" height="14" uuid="6f7bbe2e-e9e2-4a40-a059-381bfc0190c0"/>
+				<reportElement x="320" y="0" width="145" height="14" uuid="6f7bbe2e-e9e2-4a40-a059-381bfc0190c0"/>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[Universidad]]></text>
 			</staticText>
@@ -247,7 +247,7 @@ inner join puesto p on e.codigopuesto=p.codigopuesto where p.nombrepuesto like '
 			</textField>
 			<textField>
 				<reportElement x="66" y="0" width="71" height="14" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
-				<textElement>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
